# fault-inject

./: CMakeLists.txt  README.md
examples/: resilience_demo.cpp
include/fault/: types.hpp
include/fault/inject/: injector.hpp
include/fault/monitor/: detector.hpp
include/fault/scenario/: campaign.hpp
tests/: test_fault.cpp
